--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
+  "homepage": "https://github.com/EdZhou/",
   "name": "edzhou",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://ezhou0.github.io/EdZhou/",
+  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
