--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/EdZhou/",
+  "homepage": "https://ezhou0.github.io/EdZhou/",
   "name": "edzhou",
   "private": true,
   "version": "0.0.0",
