--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=./",
     "preview": "vite preview"
   },
   "dependencies": {
